<resources>
    <string name="app_name">Carrots</string>
    <string name="cabbage">Cabbage</string>
    <string name="carrot">Carrot</string>
    <string name="cauliflower">Cauliflower</string>
    <string name="green_peas">Green peas</string>
    <string name="green_beans">Green beans</string>
    <string name="broccoli">Broccoli</string>
    <string name="cucumber">Cucumber</string>
    <string name="quantity">Quantity</string>
    <string name="pickup_date">Pickup date</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="same_day_pickup">Same day pickup attracts additional %s</string>
    <string name="subtotal">Subtotal %s</string>
    <string name="total">Total %s</string>
    <string name="send_order">Send order</string>
    <string name="image_of_vegetable">An image of a vegetable</string>
    <string name="fragment_label">{name}</string>
    <string name="contact_info">Contact information</string>
    <string name="address">Delivery address</string>
    <string name="name">Name</string>
    <string name="phone">Phone number</string>
    <string name="vegetable">Vegetable</string>
    <string name="order_summary">Order summary</string>
    <string name="email_subject">New vegetable order for %s</string>
    <string name="email_body">
        Vegetable: %1$s\nQuantity: %2$s\nPickup date: %3$s\nPhone number: %4$s\nAddress: %5$s\n\nThanks.
    </string>
    <string name="provide_details">Please provide the missing details</string>
    <string name="image_of_a_vegetable">Image of a vegetable</string>
    <string name="purchase_a_vegetable_button">Purchase a vegetable button</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_12">12</string>
    <string name="_18">18</string>
    <string name="_24">24</string>
</resources>