<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.carrots.model.VegViewModel" />

        <variable
            name="contactInfoFragment"
            type="com.example.carrots.ui.ContactInformationFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="@dimen/p10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_marginTop="@dimen/m20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilName"
            android:layout_marginTop="@dimen/m10"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/m10"
            android:hint="@string/address"
            app:layout_constraintTop_toBottomOf="@id/tilPhoneNumber">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="2" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCancel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/cancel"
            android:fontFamily="@font/varela"
            android:onClick="@{() -> contactInfoFragment.cancel()}"
            app:layout_constraintBottom_toBottomOf="@+id/btnNext"
            app:layout_constraintEnd_toStartOf="@+id/btnNext"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnNext"
            android:layout_marginEnd="@dimen/m10"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m10"
            android:fontFamily="@font/varela"
            android:text="@string/next"
            android:onClick="@{() -> contactInfoFragment.next()}"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilAddress"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
             />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
