<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.carrots.model.VegViewModel" />

        <variable
            name="orderSpecsFragment"
            type="com.example.carrots.ui.OrderSpecificationsFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/p10">

        <ImageView
            android:id="@+id/ivVegetable"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            tools:src="@drawable/cab"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_of_vegetable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m10"
            android:textAppearance="@style/Title1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivVegetable"
            android:text="@string/quantity" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvQuantity">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cgQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="1" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="18" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="24" />


            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/tvPickupDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m10"
            android:textAppearance="@style/Title1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
            android:text="@string/pickup_date" />

        <HorizontalScrollView

            android:id="@+id/horizontalScrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPickupDate">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cgPickupDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/c1"
                    android:checked="true"
                    tools:text="Tue, 28" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:id="@+id/c2"
                    android:layout_height="wrap_content"
                    tools:text="Tue, 28" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:id="@+id/c3"
                    android:layout_height="wrap_content"
                    tools:text="Tue, 28" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:id="@+id/c4"
                    android:layout_height="wrap_content"
                    tools:text="Tue, 28" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/tvSameDayPickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/same_day_pickup"
            android:textAppearance="@style/Subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2" />

        <TextView
            android:id="@+id/tvSubtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m20"
            android:textAppearance="@style/Title2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSameDayPickup"
            android:text="@{@string/subtotal(viewModel.total)}" />

        <Button
            android:id="@+id/btnCancel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/cancel"
            android:fontFamily="@font/varela"
            android:onClick="@{() -> orderSpecsFragment.cancel()}"
            app:layout_constraintBottom_toBottomOf="@+id/btnNext"
            app:layout_constraintEnd_toStartOf="@+id/btnNext"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnNext"
            android:layout_marginEnd="@dimen/m10"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m10"
            android:fontFamily="@font/varela"
            android:text="@string/next"
            android:onClick="@{() -> orderSpecsFragment.next()}"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
            app:layout_constraintTop_toBottomOf="@+id/tvSubtotal" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
